# ComfyUI-GeminiImageToPrompt

./: README.md  TextBoxNode.py  __init__.py  deepseek_klingai_node.py  deepseek_r1_klingai_node.py  gemini_prompt_node.py  gemini_text_to_prompt_node.py  pyproject.toml  requirements.txt  show_generate_prompt_node.py
.github/workflows/: publish.yml
